--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # 环境变量配置
 NODE_ENV=development
 PORT=3000
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# 重要: 必须设置JWT_SECRET为一个安全的随机字符串
+# 可以使用命令生成安全的密钥：node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=
