--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "nav-server",
   "version": "1.0.0",
   "description": "Node.js + SQLite 服务器导航页",
-  "main": "server.js",  "scripts": {
+  "main": "server.js",
+  "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,16 +14,22 @@
     "docker:logs": "docker-compose logs -f"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "cors": "^2.8.5"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
   },
-  "keywords": ["navigation", "server", "sqlite", "express"],
+  "keywords": [
+    "navigation",
+    "server",
+    "sqlite",
+    "express"
+  ],
   "author": "",
   "license": "MIT"
 }
