--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,13 @@ services:
   nav-app:
     build: .
     ports:
-      - "721:721"
+      - "721:721"  # 将容器内部721端口映射到主机721端口
     volumes:
       # 将数据库文件映射到主机，确保数据持久化
       - ./data:/app/data
+    environment:
+      - NODE_ENV=production
+      - DOCKER_ENV=true
     env_file:
       - .env
     restart: unless-stopped
