--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nav-server",
-  "version": "1.0.0",
+  "name": "mjjnav",
+  "version": "1.1.1",
   "description": "Node.js + SQLite 服务器导航页",
   "main": "server.js",
   "scripts": {
